--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ h1{
     font-size: 22px;
 }
 h2{
-    margin: 0px 0px 25px 0px;
+    margin: 42px 0px 25px 40px;
     font-weight: 700;
     font-size: 22px;
 }
@@ -158,19 +158,74 @@ div.bloc_hebergements section{
     background-color: #F2F2F2;
     border-radius: 20px;
 }
-
 .hebergements{
     min-height: 625px;
-    width: 66%;
-    padding: 42px 40px 46px 40px;
+    width: 880px;
     margin-right: 40px;
 }
-
 .populaires{
     min-height: 625px;
-    width: 33%;
-    padding: 42px 40px 35px 40px;
+    width: 420px;
 }
+
+div.cards_list{
+    margin: 0px 40px 0px 40px;
+    height: 430px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-content: space-between;
+}
+
+div.card_hebergement{
+    height: 199px;
+    width: 245px;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+div.card_hebergement img{
+    object-fit: cover;
+    border-radius: 20px 20px 0px 0px;
+    border: 5px solid #FFFFFF;
+    box-sizing: border-box;
+    width: 100%;
+    max-height: 115px;
+}
+div.card_hebergement h3{
+    margin: 4px 0px 9px 16px;
+    font-weight: 700;
+    font-size: 16px;
+}
+div.price_hebergement{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin: 0px 0px 9px 16px;
+}
+div.price_hebergement p{
+    font-weight: 400;
+    font-size: 14px;
+}
+div.card_hebergement p.euro{
+    font-weight: 600;
+    font-size: 14px;
+}
+div.card_hebergement .rating{
+    display: flex;
+    margin-left: 16px;
+}
+div.card_hebergement .rating i{
+    margin-right: 2px;
+    color: #0065FC;
+}
+div.card_hebergement .rating i.empty_star{
+    color: #F2F2F2;
+}
+
 /*----- ID et héritages associés-----*/
 #logo{
     width: 61.09px;
