--- a/css/card.css
+++ b/css/card.css
@@ -9,50 +9,59 @@ body{
 p{
     margin:0;
 }
-div.card_hebergement{
-    height: 199px;
-    width: 245px;
+div.card_populaire{
+    height: 144px;
+    width: 340px;
     background-color: #FFFFFF;
     border-radius: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+div.card_populaire img{
+    object-fit: cover;
+    border-radius: 20px 0px 0px 20px;
+    border: 5px solid #FFFFFF;
+    box-sizing: border-box;
+    height: 100%;
+    max-width: 135px;
+}
+div.pop_content{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 16px 22px 12px 15px
+}
+div.pop_info{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 }
-div.card_hebergement img{
-    object-fit: cover;
-    border-radius: 20px 20px 0px 0px;
-    border: 5px solid #FFFFFF;
-    box-sizing: border-box;
-    width: 100%;
-    max-height: 115px;
-}
-div.card_hebergement h3{
-    margin: 4px 0px 9px 16px;
+div.pop_content h3{
+    margin: 0px 0px 7px 0px; 
     font-weight: 700;
     font-size: 16px;
 }
-div.price_hebergement{
+div.price_populaire{
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
-    margin: 0px 0px 9px 16px;
 }
-div.price_hebergement p{
+div.price_populaire p{
     font-weight: 400;
     font-size: 14px;
 }
-div.card_hebergement p.euro{
+div.card_populaire p.euro{
     font-weight: 600;
     font-size: 14px;
 }
-div.card_hebergement .rating{
+.rating{
     display: flex;
-    margin-left: 16px;
 }
-div.card_hebergement .rating i{
+.rating i{
     margin-right: 2px;
     color: #0065FC;
 }
-div.card_hebergement .rating i.empty_star{
+.rating i.empty_star{
     color: #F2F2F2;
 }
