--- a/css/styles.css
+++ b/css/styles.css
@@ -21,12 +21,21 @@ h1{
     font-size: 22px;
 }
 h2{
-    margin: 42px 0px 25px 40px;
+    margin: 0;
     font-weight: 700;
     font-size: 22px;
 }
+h3{
+    margin: 0px 0px 0px 0px;
+    font-weight: 700;
+    font-size: 16px;
+}
 p{
     margin:0;
+}
+a{
+    color: #000000;
+    text-decoration: none;
 }
 header nav{
     height: 126px;
@@ -50,8 +59,6 @@ ul.menu_nav{
 }
 ul.menu_nav li a{
     padding: 48px 24px 0px 24px;
-    color: #000000;
-    text-decoration: none;
 }
 ul.menu_nav li a:hover{
     font-weight: 500;
@@ -150,26 +157,33 @@ div.info_dispo_icon i{
     padding-bottom: 2px;
 }
 
-div.bloc_hebergements{
+div.bloc_logements{
     display: flex;
     justify-content: space-between;
+    height: 625px;
 }
-div.bloc_hebergements section{
+div.bloc_logements section{
     background-color: #F2F2F2;
     border-radius: 20px;
 }
-.hebergements{
-    min-height: 625px;
-    width: 880px;
-    margin-right: 40px;
+section.hebergements{
+    box-sizing: border-box;
+    height: 100%;
+    width: 65%;
+    padding: 42px 40px 0px 40px;
 }
-.populaires{
-    min-height: 625px;
-    width: 420px;
+section.hebergements h2{
+    margin-bottom: 25px;
+}
+section.populaires{
+    box-sizing: border-box;
+    height: 100%;
+    width: 32%;
+    padding: 42px 40px 35px 40px;
 }
 
-div.cards_list{
-    margin: 0px 40px 0px 40px;
+div.hebergements_list{
+    margin-bottom: 40px;
     height: 430px;
     display: flex;
     flex-direction: row;
@@ -177,17 +191,17 @@ div.cards_list{
     flex-wrap: wrap;
     align-content: space-between;
 }
-
-div.card_hebergement{
-    height: 199px;
+.card_hebergement{
+    height: 200px;
     width: 245px;
     background-color: #FFFFFF;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
 }
-div.card_hebergement img{
+.card_hebergement img{
     object-fit: cover;
     border-radius: 20px 20px 0px 0px;
     border: 5px solid #FFFFFF;
@@ -195,34 +209,94 @@ div.card_hebergement img{
     width: 100%;
     max-height: 115px;
 }
-div.card_hebergement h3{
-    margin: 4px 0px 9px 16px;
-    font-weight: 700;
-    font-size: 16px;
+.card_hebergement .hebergement_content{
+    height: 85px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 4px 26px 11px 16px;
 }
-div.price_hebergement{
+.card_hebergement:hover{
+    cursor: pointer;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.5);
+}
+
+div.populaires_title{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 25px;
+}
+div.populaires_title i{
+    color: #0065FC;
+}
+div.populaires_list{
+    margin-bottom: 34px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+}
+.card_populaire{
+    height: 144px;
+    width: 340px;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+}
+.card_populaire img{
+    object-fit: cover;
+    border-radius: 20px 0px 0px 20px;
+    border: 5px solid #FFFFFF;
+    box-sizing: border-box;
+    height: 100%;
+    width: 135px;
+}
+.card_populaire:hover{
+    cursor: pointer;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.5);
+}
+div.populaires_content{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 16px 22px 12px 15px
+}
+div.populaires_info{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+div.populaires_info h3{
+    margin-bottom: 7px;
+}
+
+div.price{
     display: flex;
     justify-content: flex-start;
-    align-items: flex-start;
-    margin: 0px 0px 9px 16px;
 }
-div.price_hebergement p{
+div.price p{
     font-weight: 400;
     font-size: 14px;
 }
-div.card_hebergement p.euro{
+div.price p.euro{
     font-weight: 600;
     font-size: 14px;
 }
-div.card_hebergement .rating{
+
+.rating{
     display: flex;
-    margin-left: 16px;
 }
-div.card_hebergement .rating i{
+.rating i{
     margin-right: 2px;
     color: #0065FC;
 }
-div.card_hebergement .rating i.empty_star{
+.rating i.empty_star{
     color: #F2F2F2;
 }
 
@@ -247,4 +321,13 @@ div.card_hebergement .rating i.empty_star{
 #filters_title{
     font-weight: 700;
     font-size: 18px;
+}
+#load-more{
+    font-weight: 700;
+    font-size: 18px;
+}
+#load-more:hover{
+    cursor: pointer;
+    text-decoration: underline;
+    text-decoration-thickness: 3px;
 }
