--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,10 @@ h3{
 p{
     margin:0;
 }
+b{
+    font-weight: 600;
+    font-size: 14px;
+}
 a{
     color: #000000;
     text-decoration: none;
@@ -50,13 +54,13 @@ header nav{
 }
 footer{
     height: 225px;
+    width: 100%;
     background-color: #F2F2F2;
     box-sizing: border-box;
-    padding: 45px 0px 0px 70px;
+    padding: 45px 70px 0px;
     display: flex;
     justify-content: flex-start;
 }
-
 /*-------------------*/
 
 /*----- Classes et héritages associés -----*/
@@ -172,7 +176,8 @@ div.info_dispo_icon i{
 div.bloc_logements{
     display: flex;
     justify-content: space-between;
-    height: 625px;
+    min-height: 625px;
+    width: 100%;
     margin-bottom: 60px;
 }
 div.bloc_logements section{
@@ -181,32 +186,34 @@ div.bloc_logements section{
 }
 section.hebergements{
     box-sizing: border-box;
-    height: 100%;
-    width: 65%;
-    padding: 42px 40px 0px 40px;
+    min-height: 625px;
+    width: calc(((100% / 3) * 2) - 20px);
+    padding: 42px 40px 46px 40px;
 }
 section.hebergements h2{
     margin-bottom: 25px;
 }
 section.populaires{
     box-sizing: border-box;
-    height: 100%;
-    width: 32%;
+    min-height: 625px;
+    width: calc((100% / 3) - 20px);
     padding: 42px 40px 35px 40px;
 }
 
 div.hebergements_list{
-    margin-bottom: 40px;
-    height: 430px;
+    margin: 0px auto 40px;
+    width: 100%;
+    min-height: 430px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
     align-content: space-between;
+    row-gap: 30px;
 }
 .card_hebergement{
-    height: 200px;
-    width: 245px;
+    max-height: 250px;
+    width: calc((100% / 3) - 14px);
     background-color: #FFFFFF;
     border-radius: 20px;
     display: flex;
@@ -220,14 +227,15 @@ div.hebergements_list{
     border: 5px solid #FFFFFF;
     box-sizing: border-box;
     width: 100%;
-    max-height: 115px;
+    height: 60%;
 }
 .card_hebergement .hebergement_content{
-    height: 85px;
+    height: 40%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 4px 26px 11px 16px;
+    box-sizing: border-box;
+    padding: 4px 16px 11px;
 }
 .card_hebergement:hover{
     cursor: pointer;
@@ -245,7 +253,6 @@ div.populaires_title i{
     color: #0065FC;
 }
 div.populaires_list{
-    margin-bottom: 34px;
     height: 500px;
     display: flex;
     flex-direction: column;
@@ -253,32 +260,35 @@ div.populaires_list{
     
 }
 .card_populaire{
-    height: 144px;
-    width: 340px;
+    min-height: 145px;
+    width: auto;
     background-color: #FFFFFF;
+    background-size: cover;
     border-radius: 20px;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
 }
+
 .card_populaire img{
-    object-fit: cover;
+    object-fit: cover ;
     border-radius: 20px 0px 0px 20px;
     border: 5px solid #FFFFFF;
     box-sizing: border-box;
     height: 100%;
-    width: 135px;
+    width: 30%;
 }
 .card_populaire:hover{
     cursor: pointer;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.5);
 }
 div.populaires_content{
+    width: 70%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 16px 22px 12px 15px
+    margin: 16px 15px 12px 15px
 }
 div.populaires_info{
     display: flex;
@@ -288,16 +298,11 @@ div.populaires_info{
 div.populaires_info h3{
     margin-bottom: 7px;
 }
-
-div.price{
-    display: flex;
-    justify-content: flex-start;
-}
-div.price p{
+p.price{
     font-weight: 400;
     font-size: 14px;
 }
-div.price p.euro{
+p.price span.euro{
     font-weight: 600;
     font-size: 14px;
 }
@@ -309,7 +314,7 @@ div.price p.euro{
     margin-right: 2px;
     color: #0065FC;
 }
-.rating i.empty_star{
+.rating i:last-child{
     color: #F2F2F2;
 }
 
@@ -325,7 +330,7 @@ div.activites_list{
 }
 .card_activites{
     height: 445px;
-    width: 302px;
+    width: calc(25% - 15px);
     background-color: #FFFFFF;
     border-radius: 20px;
     display: flex;
@@ -348,7 +353,7 @@ div.activites_list{
 }
 
 div.footer_bloc{
-    margin-right: 230px;
+    width: calc(100% / 3);
 }
 div.footer_bloc .footer_title{
     font-weight: 700;
@@ -367,7 +372,7 @@ div.footer_bloc ul li:hover{
     height: 19px;
     margin-top: 44px;
 }
-#Recherche{
+#recherche{
     width: 132px;
     Height: 51px;
     border-radius: 0px 15px 15px 0px;
