--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ h2{
 }
 h3{
     margin: 0px 0px 0px 0px;
+    padding-bottom: 9px;
     font-weight: 700;
     font-size: 16px;
 }
@@ -53,13 +54,14 @@ header nav{
     justify-content: space-between;
 }
 footer{
-    height: 225px;
+    min-height: 225px;
     width: 100%;
     background-color: #F2F2F2;
     box-sizing: border-box;
-    padding: 45px 70px 0px;
+    padding: 45px 0px 0px 70px;
     display: flex;
     justify-content: flex-start;
+    column-gap: 40px;
 }
 /*-------------------*/
 
@@ -67,19 +69,19 @@ footer{
 
 ul.menu_nav{
     width: 324px;
-    height: 67px;
-    margin: 2px 27px 0px 0px;
+    height: 65px;
+    margin-top: 4px;
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
 }
 ul.menu_nav li a{
-    padding: 48px 24px 0px 24px;
+    padding: 47px 36px 0px;
 }
 ul.menu_nav li a:hover{
     font-weight: 500;
     color: #0065FC;
-    border-top: 2px solid #0065FC;
+    border-top: 3px solid #0065FC;
 }
 
 form.bloc_recherche{
@@ -212,7 +214,7 @@ div.hebergements_list{
     row-gap: 30px;
 }
 .card_hebergement{
-    max-height: 250px;
+    min-height: 200px;
     width: calc((100% / 3) - 14px);
     background-color: #FFFFFF;
     border-radius: 20px;
@@ -227,10 +229,10 @@ div.hebergements_list{
     border: 5px solid #FFFFFF;
     box-sizing: border-box;
     width: 100%;
-    height: 50%;
+    height: 110px;
 }
 .card_hebergement .hebergement_content{
-    height: 50%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -251,13 +253,15 @@ div.populaires_title{
 }
 div.populaires_title i{
     color: #0065FC;
+    padding-left: 10px;
 }
 div.populaires_list{
-    height: 500px;
+    min-height: 450px;
+    /* pourquoi les images réduisent quand on ajout le 'min' ? */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    
+    row-gap: 15px;  
 }
 .card_populaire{
     min-height: 145px;
@@ -270,21 +274,20 @@ div.populaires_list{
     justify-content: flex-start;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
 }
-
 .card_populaire img{
     object-fit: cover ;
     border-radius: 20px 0px 0px 20px;
     border: 5px solid #FFFFFF;
     box-sizing: border-box;
-    height: 100%;
-    width: 30%;
+    /* height: 100%; */
+    width: 40%;
 }
 .card_populaire:hover{
     cursor: pointer;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.5);
 }
 div.populaires_content{
-    width: 70%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -295,12 +298,11 @@ div.populaires_info{
     flex-direction: column;
     justify-content: flex-start;
 }
-div.populaires_info h3{
-    margin-bottom: 7px;
-}
+
 p.price{
     font-weight: 400;
     font-size: 14px;
+    padding-bottom: 9px;
 }
 p.price span.euro{
     font-weight: 600;
@@ -345,7 +347,8 @@ div.activites_list{
     width: 100%;
 }
 .card_activites h3{
-    margin: auto 34px auto 19px;
+    margin: auto 15px;
+    padding-bottom: 0px;
 }
 .card_activites:hover{
     cursor: pointer;
@@ -370,7 +373,7 @@ div.footer_bloc ul li:hover{
 #logo{
     width: 61.09px;
     height: 19px;
-    margin-top: 44px;
+    margin-top: 50px;
 }
 #recherche{
     width: 132px;
@@ -396,4 +399,47 @@ div.footer_bloc ul li:hover{
     cursor: pointer;
     text-decoration: underline;
     text-decoration-thickness: 3px;
+}
+
+/*----- MEDIAS QUERIES -----*/
+
+/*----- TABLETTES - 768px -> 991px -----*/
+@media screen and (max-width: 991px) {
+    
+    div.bloc_logements{
+        flex-direction: column;
+        min-height: 905px;
+        row-gap: 55px;
+    }
+
+    section.hebergements{
+        width: 100%;
+    }
+
+    section.populaires{
+        min-height: 278px;
+        width: 100%;
+    }
+    div.populaires_list{
+        min-height: 145px;
+        flex-direction: row;
+    }
+    .card_populaire {
+        width: calc((100% / 3) - 13px);
+    }
+    div.populaires_content{
+        margin: 12px 10px 12px;
+    }
+    
+    .card_activites{
+        height: 267px;
+    }
+    .card_activites img{
+        height: 210px;
+    }
+
+    footer{
+        justify-content: space-between;
+        padding: 35px 0px 15px 50px;
+    }
 }
