--- a/css/styles.css
+++ b/css/styles.css
@@ -123,13 +123,19 @@ form.bloc_recherche .searchbar input:focus{
     outline: none;
 }
 
-div.filters_box{
-    margin: 35px 460px 35px 0px;
-    height: 50px;
-    width: 874px;
+div.filters_content{
+    margin: 35px 0px;
+    width: auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
+}
+div.filters_boxes{
+    display: flex;
+    column-gap: 30px;
+    row-gap: 30px;
+    flex-wrap: wrap;
+    
 }
 div.filters{
     height: 46px;
@@ -190,7 +196,7 @@ section.hebergements{
     box-sizing: border-box;
     min-height: 625px;
     width: calc(((100% / 3) * 2) - 20px);
-    padding: 42px 40px 46px 40px;
+    padding: 42px 40px 0px 40px;
 }
 section.hebergements h2{
     margin-bottom: 25px;
@@ -203,7 +209,7 @@ section.populaires{
 }
 
 div.hebergements_list{
-    margin: 0px auto 40px;
+    margin: 0px auto;
     width: 100%;
     min-height: 430px;
     display: flex;
@@ -214,7 +220,8 @@ div.hebergements_list{
     row-gap: 30px;
 }
 .card_hebergement{
-    min-height: 200px;
+    min-height: 225px;
+    max-height: 225px;
     width: calc((100% / 3) - 14px);
     background-color: #FFFFFF;
     border-radius: 20px;
@@ -222,6 +229,7 @@ div.hebergements_list{
     flex-direction: column;
     justify-content: flex-start;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+    padding-bottom: 5px;
 }
 .card_hebergement img{
     object-fit: cover;
@@ -229,7 +237,9 @@ div.hebergements_list{
     border: 5px solid #FFFFFF;
     box-sizing: border-box;
     width: 100%;
-    height: 110px;
+    min-height: 110px;
+    max-height: 110px;
+
 }
 .card_hebergement .hebergement_content{
     height: 100%;
@@ -242,6 +252,21 @@ div.hebergements_list{
 .card_hebergement:hover{
     cursor: pointer;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.5);
+}
+div.load-more {
+    min-height: 130px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+div.load-more a{
+    font-weight: 700;
+    font-size: 18px;
+}
+div.load-more a:hover{
+    cursor: pointer;
+    text-decoration: underline;
+    text-decoration-thickness: 3px;
 }
 
 div.populaires_title{
@@ -264,7 +289,8 @@ div.populaires_list{
     row-gap: 15px;  
 }
 .card_populaire{
-    min-height: 145px;
+    min-height: 180px;
+    max-height: 180px;
     width: auto;
     background-color: #FFFFFF;
     background-size: cover;
@@ -291,7 +317,8 @@ div.populaires_content{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 16px 15px 12px 15px
+    padding: 16px 15px 12px 15px;
+    box-sizing: border-box;
 }
 div.populaires_info{
     display: flex;
@@ -390,21 +417,14 @@ div.footer_bloc ul li:hover{
 #filters_title{
     font-weight: 700;
     font-size: 18px;
+    margin-right: 30px;
 }
-#load-more{
-    font-weight: 700;
-    font-size: 18px;
-}
-#load-more:hover{
-    cursor: pointer;
-    text-decoration: underline;
-    text-decoration-thickness: 3px;
-}
+
 
 /*----- MEDIAS QUERIES -----*/
 
-/*----- TABLETTES - 768px -> 991px -----*/
-@media screen and (max-width: 991px) {
+/*----- TABLETTES - 769px -> 991px -----*/
+@media screen and (max-width: 992px) {
     
     div.bloc_logements{
         flex-direction: column;
@@ -425,10 +445,10 @@ div.footer_bloc ul li:hover{
         flex-direction: row;
     }
     .card_populaire {
-        width: calc((100% / 3) - 13px);
+        width: calc((100% / 3) - 10px);
     }
     div.populaires_content{
-        margin: 12px 10px 12px;
+        padding: 12px 10px;
     }
     
     .card_activites{
