--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,9 @@ div.info_dispo{
     align-items: center;
     align-content: center;
 }
+div.info_dispo p{
+    width: calc(100% - 37px);
+}
 div.info_dispo_icon{
     height: 24px;
     width: 24px;
@@ -182,6 +185,7 @@ div.info_dispo_icon{
 div.info_dispo_icon i{
     padding-bottom: 2px;
 }
+
 
 div.bloc_logements{
     display: flex;
@@ -433,7 +437,6 @@ div.footer_bloc ul li:hover{
     font-size: 18px;
     margin-right: 30px;
 }
-
 
 /*----- MEDIAS QUERIES -----*/
 
